feat: 코드리뷰 반영(List에서 페이지네이션으로 변경)